--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "mongodb": "^6.17.0",
     "mongoose": "^8.15.2",
     "nodemailer": "^7.0.3",
-    "nodemon": "^3.1.10"
+    "nodemon": "^3.1.10",
+    "razorpay": "^2.9.6"
   }
 }
