--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "html-pdf": "^3.0.1",
     "mongodb": "^6.17.0",
     "mongoose": "^8.15.2",
+    "multer": "^2.0.1",
     "nodemailer": "^7.0.3",
     "nodemon": "^3.1.10",
     "razorpay": "^2.9.6"
